styles: all of them

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/d1aa1acf1f.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Hind&family=Righteous&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Fragile Express - Handled With Love</title>
 </head>
@@ -24,16 +25,17 @@
     <section class="hero-banner">
         <div class="hero-text">
             <h1>Fragile Express</h1>
-            <h5>Handled With Love</h5>
+            <h5>Handled With Love <i class="fas fa-heart"></i></h5>
+            <p>Our porters are standing by to get your parcels delivered</p>
         </div>
     </section>
 
     <section class="about" id="about">
-        <h2>We deliver packages in any circumstances</h2>
+        <h2>We deliver packages in any circumstance</h2>
         <h4>Too dangerous to venture outside? Fragile Express has you covered!</h4>
         <p>Fragile Express prides itself in delivering packages in excellent condition and on time.</p>
         <p>Our porters receive training using our proprietary state-of-the-art VR Training System 
-            to be prepared for any scenario that comes their way during delivery</p>
+            to be prepared for any scenario that comes their way during delivery.</p>
     </section>
 
     <section class="services" id="services">
@@ -57,8 +59,8 @@
         </div>
     </section>
 
-    <seciton class="faq" id="faq">
-        <h2>Got questions? We have answers!</h2>
+    <section class="faq" id="faq">
+        <h2>Questions? We have answers!</h2>
         <ol>
             <li>What happens if my package is lost?</li>
             <span>A: Our delivery system sends a beacon to other porters in our network to notify them of lost packages that they can pick up and continue the delivery.</span>
@@ -69,7 +71,7 @@
                 send a team to have them rescued.
             </span>
         </ol>
-    </seciton>
+    </section>
 
     <section class="contact" id="contact">
         <h2>Contact Us</h2>
@@ -82,6 +84,7 @@
             <input type="email">
             <label>Message</label>
             <input type="textarea">
+            <input type="submit" value="SEND">
         </form>
     </section>
 
