refactor: adjusted styles to make it more mobile friendly

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <title>Fragile Express - Handled With Love</title>
 </head>
 <body>
-    
+
     <header>
         <nav>
             <ul>
                 <li>About</li>
                 <li>Services</li>
-                <li><img src="images/fragile_logo.jpg" width="200px"/></li>
+                <li><img src="images/fragile_logo.jpg" width="50px"/></li>
                 <li>FAQ</li>
                 <li>Contact</li>
             </ul>
@@ -29,7 +29,7 @@
             <p>Our porters are standing by to get your parcels delivered</p>
         </div>
     </section>
-
+    <section class="container">
     <section class="about" id="about">
         <h2>We deliver packages in any circumstance</h2>
         <h4>Too dangerous to venture outside? Fragile Express has you covered!</h4>
@@ -87,7 +87,7 @@
             <input type="submit" value="SEND">
         </form>
     </section>
-
+</section>
     <footer>
         <p>Fragile Express &copy 2020</p>
     </footer>
