--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <header>
         <nav>
             <ul>
-                <li>About</li>
-                <li>Services</li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
                 <li><img src="images/fragile_logo.jpg" width="50px"/></li>
-                <li>FAQ</li>
-                <li>Contact</li>
+                <li><a href="#faq">FAQ</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
